--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,13 @@ body {
    font-size: 32px;
 }
 
+a {
+   color: blueviolet;
+   list-style: none;
+}
+
+ul {
+   list-style: none;
+   display: flex;
+}
+
